# tbchat

client/: index.html  script.js  style.css  test_client.html
client/css/: style-catppucian.css  style-default.css  style-solarized.css
server/: CMakeLists.txt  README.md
server/include/: Room.h  RoomsHandler.h  Server.h  User.h
server/src/: Room.cpp  RoomsHandler.cpp  Server.cpp  User.cpp  main.cpp
